--- a/merchandise.css
+++ b/merchandise.css
@@ -7,119 +7,172 @@
   display: inline;
  }
 body {
-         background-image:url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b17.png");
+         background-image:url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
  #one {
-	 color: #FFFFFF;
+	 color: #001F5C;
     text-align: center;
     font-family: Century Gothic;
     padding: 14px 10px;
-    border-style: groove;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 750px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Cubes-White-Seamless-Pattern.jpg");
 }
 
 #two h2 {
     padding: 14px 10px;
-    border-style: groove;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     height: 28px;
     width: 250px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b20.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
 #two {
-    color: #FFFFFF;
+    color: #001F5C;
     text-align: center;
     font-family: Century Gothic;
     padding: 14px 10px;
-    border-style: groove;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 750px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Cubes-White-Seamless-Pattern.jpg");
 }
 
 
 
 #bottom {
-	color: #FFFFFF;
+	color: #001F5C;
     text-align: center;
-    font-family: sans-serif;
+    font-family: Century Gothic;
     padding: 14px 10px;
-    border-style: groove;
-    border-width: 10px;
-    border-color: #060606;
+     border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 750px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Cubes-White-Seamless-Pattern.jpg");
 }
 
 #shirt1 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 400px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
 #shirt2 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 225px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
     
 #shirt3 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 360px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
 #shirt4 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 500px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
 #shirt5 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 330px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
 }
 
 #shirt6 {
     padding: 14px 10px;
-    border-style: dotted;
-    border-width: 10px;
-    border-color: #060606;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #001F5C;
     width: 355px; 
     margin: 0 auto; 
-    background-image: url("http://supernovathemes.com/wp-content/themes/supernonvathemes/images/bg/b12.png");
+    background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.nav ul {
+  list-style: none;
+   background-image: url("http://www.designbolts.com/wp-content/uploads/2012/12/Triangle-White-Seamless-Patterns.jpg");
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.nav li {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
+  border-bottom: 1px solid #888;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #001F5C;
+  display: block;
+  transition: .5s background-color;
+}
+
+.nav a:hover {
+  background-color: #B2B2B2;
 }
 
 
+@media screen and (min-width: 600px) {
+  .nav li {
+    width: 150px;
+    border-bottom: none;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.4em;
+    
+  }
+  
+  .nav li {
+    display: inline-block;
+    margin-right: -4px;
+  }
+  
+  .nav img {
+      max-height: 45px;
+      position: absolute;
+      top: 2px;
+      left: 5px;
+  }
